# gpuindex

./: .env.example  .gitignore  Caddyfile  Dockerfile  README.md  build_info.py  config.py  docker-compose.yml  docker-entrypoint.sh  logging_utils.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_snapshot_rollups.py  003_credibility.py  004_code_version.py
analysis/: audit_normalization.py  eligibility.py  rollups.py  snapshots.py  trends.py
api/: deps.py  main.py  pages.py  rate_limit.py
api/routes/: v1.py
collectors/: base.py  dummy.py  gpu_normalize.py  http_util.py  lambda_labs.py  parser_version.py  providers.py  runpod.py  skypilot_catalog.py  vast.py
db/: models.py  session.py
jobs/: rollup_job.py  scheduler.py  status.py  status_data.py
probes/: availability.py
tests/: __init__.py  test_api.py  test_collectors.py  test_deploy_hardening.py  test_eligibility.py  test_gpu_normalize.py  test_models.py  test_phase1_collectors.py  test_rollups.py  test_trends.py
tests/fixtures/: lambda_instance_types.json  runpod_gpu_types.json  skypilot_lambda_vms.csv  vast_bundles.json
web/static/: style.css
web/templates/: base.html  gpu.html  index.html  methodology.html  status.html
